fix cartoonival logo spacing?

--- a/styles/style.module.scss
+++ b/styles/style.module.scss
@@ -19,8 +19,13 @@
 }
 
 .cartoonivalLogo{
+    width: 100%;
     max-width: 400px;
     margin-bottom: -25px;
+
+    @media screen and (max-width: 700px) {
+        max-width: unset;
+    }
 }
 
 .scrollingBackgroundContainer{
